--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <head> <title> Google maps</title> <link rel="stylesheet" href="style.css"> </link></head>
     <body>
         <header>
             <div class="logo">
